# ocr-corpus

./: README.md
crates/ocr_arxiv_fetcher/: Cargo.toml
crates/ocr_arxiv_fetcher/src/: main.rs
