[package]
name = "ocr_arxiv_fetcher"
version = "0.1.0"
authors = ["naetherm <naether.markus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.7"
hyper-tls = "0.4.3"
reqwest = "0.10.8"